--- a/layouts/index.html
+++ b/layouts/index.html
@@ -5,13 +5,13 @@
 
   <body>
 
-    <div id="all">
+    <div>
 
         <header>
-
+     {{ partial "nav.html" . }}
         </header>
 
-
+        {{ partial "footer.html" . }}
     </div>
 
   </body>
