--- a/layouts/index.html
+++ b/layouts/index.html
@@ -10,6 +10,7 @@
         <header>
      {{ partial "nav.html" . }}
         </header>
+      {{ partial "body.html" . }}
 
         {{ partial "footer.html" . }}
     </div>
