--- a/layouts/partials/body.html
+++ b/layouts/partials/body.html
@@ -1,4 +1,5 @@
 <div class="container">
-  <h1>David Cisneros</h1>
-  <h3>Software Developer</h3>
+ <div class="row">
+   <h1>David Cisneros</h1>
+ </div>
 </div>
