--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,118 +1,5 @@
-<div>
+<footer class="footer">
     <div class="container">
-        <div class="col-md-12">
-            <p class="pull-left"></p>
-
-            <p class="pull-right">
-            <img src="" alt="{{ .Title }}" class="hidden-xs hidden-sm">
-            <!--
-              <ul class="list-inline text-center footer-links pull-right">
-                  {{ if .Site.Author.facebook }}
-                  <li>
-                    <a href="https://www.facebook.com/{{ .Site.Author.facebook }}" title="Facebook">
-                      <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                      </span>
-                    </a>
-                  </li>
-                  {{ end }}
-                  {{ if .Site.Author.github }}
-                  <li>
-                    <a href="https://github.com/{{ .Site.Author.github }}" title="GitHub">
-                      <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                      </span>
-                    </a>
-                  </li>
-                  {{ end }}
-                  {{ if .Site.Author.instagram }}
-                  <li>
-                    <a href="https://github.com/{{ .Site.Author.instagram }}" title="instagram">
-                      <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
-                      </span>
-                    </a>
-                  </li>
-                  {{ end }}
-                      {{ if .Site.Author.twitter }}
-                  <li>
-                    <a href="https://twitter.com/{{ .Site.Author.twitter }}" title="Twitter">
-                      <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                      </span>
-                    </a>
-                  </li>
-                  {{ end }}
-                      {{ if .Site.Author.email }}
-                  <li>
-                    <a href="mailto:{{ .Site.Author.email }}" title="Email me">
-                      <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-envelope fa-stack-1x fa-inverse"></i>
-                      </span>
-                    </a>
-                  </li>
-                  {{ end }}
-                      {{ if .Site.Author.linkedin }}
-                  <li>
-                    <a href="https://linkedin.com/{{ .Site.Author.linkedin }}" title="LinkedIn">
-                      <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
-                      </span>
-                    </a>
-                  </li>
-                  {{ end }}
-                      {{ if .Site.Author.stackoverflow }}
-                  <li>
-                    <a href="https://stackoverflow.com/users/{{ .Site.Author.stackoverflow }}" title="StackOverflow">
-                      <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-stack-overflow fa-stack-1x fa-inverse"></i>
-                      </span>
-                    </a>
-                  </li>
-                  {{ end }}
-                  {{ if .Site.Author.soundcloud }}
-                  <li>
-                    <a href="https://soundcloud.com/{{ .Site.Author.soundcloud }}" title="SoundCloud">
-                      <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-soundcloud fa-stack-1x fa-inverse"></i>
-                      </span>
-                    </a>
-                  </li>
-                  {{ end }}
-                  {{ if .Site.Author.wikipedia }}
-                  <li>
-                    <a href="https://wikipedia.org/wiki/User:{{ .Site.Author.wikipedia }}" title="Wikipedia">
-                      <span class="fa-stack fa-lg">
-                        <i class="fa fa-circle fa-stack-2x"></i>
-                        <i class="fa fa-wikipedia-w fa-stack-1x fa-inverse"></i>
-                      </span>
-                    </a>
-                  </li>
-                  {{ end }}
-                -->
-                      <!-- <li>
-                        <a href="{{ .Site.BaseURL}}index.xml" title="RSS">
-                          <span class="fa-stack fa-lg">
-                                <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-                          </span>
-                        </a>
-                      </li>      -->
-              <!--
-                </ul>
-                -->
-            </p>
-        </div>
+      <span class="text-muted">Place sticky footer content here.</span>
     </div>
-</div>
-<!-- /#copyright -->
-
-<!-- *** COPYRIGHT END *** -->
+  </footer>
