--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -9,6 +9,9 @@
         <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="#">About</a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#">Projects</a>
       </li>
       <li class="nav-item">
