--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,9 +1,9 @@
 <footer class="footer">
     <div class="container">
-      <span class="text-muted">
-        <a class="social" href="https://twitter.com/daveedcis"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-        <a class="social" href="https://github.com/davicitoafc"><i class="fa fa-github" aria-hidden="true"></i></a>
-        <a class="social" href="https://www.linkedin.com/in/davidcis/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-      </span>
+        <ul class="list-inline">
+          <li class="list-inline-item"><a class="social" href="https://twitter.com/daveedcis"><i class="fa fa-twitter" aria-hidden="true"></i>Twitter</a></li>
+          <li class="list-inline-item"><a class="social" href="https://github.com/davicitoafc"><i class="fa fa-github" aria-hidden="true"></i>Github</a></li>
+          <li class="list-inline-item"><a class="social" href="https://www.linkedin.com/in/davidcis/"><i class="fa fa-linkedin" aria-hidden="true"></i>Linkedin</a></li>
+        </ul>
     </div>
   </footer>
