switched to simple design

--- a/layouts/partials/body.html
+++ b/layouts/partials/body.html
@@ -1,10 +1,6 @@
 <div class="container">
+ <p class="description">I'm a full-stack developer from the bay area that specializes in ruby on rails and nodejs. Currently working for dev shop, <a href="http://aulabs.co">AuLabs</a>, where I wear work on various client projects in the front and back end, with occasionally taking on a quality assurance role. </p>
  <div class="row">
-  <div class="col">
-      1 of 2
-  </div>
-  <div class="col">
-      2 of 2
-  </div>
+
  </div>
 </div>
