--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,19 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
  <div class="container">
-  <a class="navbar-brand" href="#">David Cisneros</a>
+  <a class="navbar-brand nav-edit">David Cisneros</a>
    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
    </button>
    <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item active">
-        <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
+      <li class="nav-item">
+        <a class="nav-link social" href="https://twitter.com/daveedcis"><i class="fa fa-twitter" aria-hidden="true"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Projects</a>
+        <a class="nav-link social" href="https://github.com/davicitoafc"><i class="fa fa-github" aria-hidden="true"></i></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Blog</a>
+        <a class="nav-link social"href="https://www.linkedin.com/in/davidcis/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
       </li>
     </ul>
   </div>
