--- a/static/css/main.css
+++ b/static/css/main.css
@@ -38,12 +38,21 @@ code {
 }
 
 a.social {
-  color: grey;
   text-decoration: none;
   font-size: 4ex;
   padding: 0 20px;
 }
 
+.nav-edit {
+  color: rgba(0,0,0,.5) !important;
+  font-size: 3ex;
+}
+
 .fa-twitter:hover, .fa-github:hover, .fa-linkedin:hover {
-  color: white;
+  color: #000;
+}
+
+p.description {
+  color: grey;
+  font-size: 3ex;
 }
