--- a/layouts/partials/body.html
+++ b/layouts/partials/body.html
@@ -1,6 +1,34 @@
 <div class="container">
- <p class="description">I'm a full-stack developer from the bay area that specializes in ruby on rails and nodejs. Currently working for dev shop, <a href="http://aulabs.co">AuLabs</a>, where I wear work on various client projects in the front and back end, with occasionally taking on a quality assurance role. </p>
- <div class="row">
-
- </div>
+ <p class="description">I'm a full-stack developer from the bay area that specializes in ruby on rails and nodejs. Currently working for dev shop, <a href="http://aulabs.co">AuLabs</a>, where I wear work on various client projects in the front and back end, with occasionally taking on a quality assurance role. Check out the projects I've worked on below. </p>
 </div>
+<section class="projects">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-4">
+        <a href="https://salty-scrubland-98291.herokuapp.com/"><h3>Hitchr</h3></a>
+        <h6>Ruby on Rails-jQuery-Google API</h6>
+        <p>A long distance ridesharing app that allows users to hitch a ride across Canada with other users who offer rides to distant locations</p>
+      </div>
+      <div class="col-sm-4">
+        <a href="https://radiant-gorge-12801.herokuapp.com/"><h3>Crowdfunder</h3></a>
+        <h6>Ruby on Rails-Bootstrap</h6>
+        <p>A kickstarter clone that lets users pledge money to projects they are interested and post projects they want to raise money for</p>
+      </div>
+      <div class="col-sm-4">
+        <a href="https://blooming-plateau-24802.herokuapp.com/"><h3>PickupApp</h3></a>
+        <h6>Ruby on Rails-jQuery-Google Maps-FbOAuth-APIXU WeatherAPI-Bootstrap</h6>
+        <p>A webapp that makes creating and organizing games online easy</p>
+      </div>
+      <div class="col-sm-4">
+        <a href="http://sapporomaki.com"><h3>SapporoMaki</h3></a>
+        <h6>Hugo-Shopify</h6>
+        <p>A client website that I revamped with shopify integration for easy online shopping experience</p>
+      </div>
+      <div class="col-sm-4">
+        <h3>ProjectGyruss</h3>
+        <h6>Sinatra-MongoDB-jQuery-Bootstrap</h6>
+        <p>Still a work in progress, but currently building out an web app that reads rfid tags and logs them to a database in realtime.</p>
+      </div>
+    </div>
+  </div>
+</section>
