--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -21,7 +21,7 @@
 
 
   <!-- Custom stylesheet - for your changes -->
-  <link href="{{ .Site.BaseURL }}css/main.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="{{ .Site.BaseURL }}css/main.css">
 
   <!-- Font Awesome stylesheet - for your changes -->
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
