--- a/layouts/partials/body.html
+++ b/layouts/partials/body.html
@@ -25,7 +25,7 @@
         <p>A client website that I revamped with shopify integration for easy online shopping experience</p>
       </div>
       <div class="col-sm-4">
-        <h3>ProjectGyruss</h3>
+        <a class="projectTitle" target="_blank" href="http://iotone.co"><h3>ProjectGyr</h3></a>
         <h6>Sinatra-MongoDB-jQuery-Bootstrap-Thinkify Reader TR-265</h6>
         <p>Still a work in progress, but currently building out an web app that reads rfid tags and logs them to a database in realtime.</p>
       </div>
